docs: rewrite installation section with GitHub Packages + optional HPC/GPU + build-from-source